<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QRScannerActivity"
    android:padding="@android:dimen/app_icon_size">


    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnAction"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtBarcodeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/no_barcode_detected"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAction"
        app:layout_constraintEnd_toEndOf="@+id/surfaceView"
        app:layout_constraintStart_toStartOf="@+id/surfaceView"
        app:layout_constraintTop_toTopOf="@+id/surfaceView"
        app:layout_constraintVertical_bias="0.471"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/scan_qr_code_bar_code"
        app:layout_constraintBottom_toBottomOf="@+id/surfaceView"
        app:layout_constraintTop_toTopOf="@+id/surfaceView"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btnTestOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/test_ok"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/surfaceView"
        app:layout_constraintTop_toTopOf="@+id/surfaceView"
        app:layout_constraintVertical_bias="0.902"
        tools:layout_editor_absoluteX="36dp" />

    <Button
        android:id="@+id/btnTestNoOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/test_no_ok"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/surfaceView"
        app:layout_constraintTop_toTopOf="@+id/surfaceView"
        app:layout_constraintVertical_bias="0.804"
        tools:layout_editor_absoluteX="58dp" />

</androidx.constraintlayout.widget.ConstraintLayout>